// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Transcript component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex p-3"
      >
        <div
          class="w-full"
        >
          <h3
            class="text-center"
          >
            Transcript
          </h3>
          <div
            class="flex border rounded mt-3 p-1 bg-gray-100"
          >
            <div
              class="w-full"
            >
              <div
                class="flex"
              >
                <div
                  class="w-full"
                >
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      <div
                        class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="md:w-6/12"
                    >
                      <h4
                        class="m-0"
                      >
                        James Smith
                      </h4>
                    </div>
                  </div>
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      00:10
                    </div>
                    <div
                      class="md:w-10/12"
                    >
                      <div>
                        Good morning, everyone.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-1 bg-gray-100"
          >
            <div
              class="w-full"
            >
              <div
                class="flex"
              >
                <div
                  class="w-full"
                >
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      <div
                        class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="md:w-6/12"
                    >
                      <h4
                        class="m-0"
                      >
                        James Smith
                      </h4>
                    </div>
                  </div>
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      00:15
                    </div>
                    <div
                      class="md:w-10/12"
                    >
                      <div>
                        Hi, 
                        <span
                          class="font-bold"
                        >
                          Madison
                        </span>
                        ! How are you?
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-1 bg-gray-100"
          >
            <div
              class="w-full"
            >
              <div
                class="flex"
              >
                <div
                  class="w-full"
                >
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      <div
                        class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                      >
                        MB
                      </div>
                    </div>
                    <div
                      class="md:w-6/12"
                    >
                      <h4
                        class="m-0"
                      >
                        Madison Butler
                      </h4>
                    </div>
                  </div>
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      00:05
                    </div>
                    <div
                      class="md:w-10/12"
                    >
                      <div>
                        Very good, thanks !
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-1 bg-gray-100"
          >
            <div
              class="w-full"
            >
              <div
                class="flex"
              >
                <div
                  class="w-full"
                >
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      <div
                        class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                      >
                        MB
                      </div>
                    </div>
                    <div
                      class="md:w-6/12"
                    >
                      <h4
                        class="m-0"
                      >
                        Madison Butler
                      </h4>
                    </div>
                  </div>
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      00:17
                    </div>
                    <div
                      class="md:w-10/12"
                    >
                      <div>
                        Oh, before I forget, can you please send me the 
                        <span
                          class="font-bold"
                        >
                          quote
                        </span>
                         we discussed 
                        <span
                          class="font-bold"
                        >
                          yesterday
                        </span>
                        ?
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex border rounded mt-3 p-1 bg-gray-100"
          >
            <div
              class="w-full"
            >
              <div
                class="flex"
              >
                <div
                  class="w-full"
                >
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      <div
                        class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="md:w-6/12"
                    >
                      <h4
                        class="m-0"
                      >
                        James Smith
                      </h4>
                    </div>
                  </div>
                  <div
                    class="flex mt-1 items-center"
                  >
                    <div
                      class="md:w-2/12"
                    >
                      00:04
                    </div>
                    <div
                      class="md:w-10/12"
                    >
                      <div>
                        Sure, I will send you an email with the 
                        <span
                          class="font-bold"
                        >
                          quote
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex p-3"
    >
      <div
        class="w-full"
      >
        <h3
          class="text-center"
        >
          Transcript
        </h3>
        <div
          class="flex border rounded mt-3 p-1 bg-gray-100"
        >
          <div
            class="w-full"
          >
            <div
              class="flex"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    <div
                      class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                    >
                      JS
                    </div>
                  </div>
                  <div
                    class="md:w-6/12"
                  >
                    <h4
                      class="m-0"
                    >
                      James Smith
                    </h4>
                  </div>
                </div>
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    00:10
                  </div>
                  <div
                    class="md:w-10/12"
                  >
                    <div>
                      Good morning, everyone.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex border rounded mt-3 p-1 bg-gray-100"
        >
          <div
            class="w-full"
          >
            <div
              class="flex"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    <div
                      class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                    >
                      JS
                    </div>
                  </div>
                  <div
                    class="md:w-6/12"
                  >
                    <h4
                      class="m-0"
                    >
                      James Smith
                    </h4>
                  </div>
                </div>
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    00:15
                  </div>
                  <div
                    class="md:w-10/12"
                  >
                    <div>
                      Hi, 
                      <span
                        class="font-bold"
                      >
                        Madison
                      </span>
                      ! How are you?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex border rounded mt-3 p-1 bg-gray-100"
        >
          <div
            class="w-full"
          >
            <div
              class="flex"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    <div
                      class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                    >
                      MB
                    </div>
                  </div>
                  <div
                    class="md:w-6/12"
                  >
                    <h4
                      class="m-0"
                    >
                      Madison Butler
                    </h4>
                  </div>
                </div>
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    00:05
                  </div>
                  <div
                    class="md:w-10/12"
                  >
                    <div>
                      Very good, thanks !
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex border rounded mt-3 p-1 bg-gray-100"
        >
          <div
            class="w-full"
          >
            <div
              class="flex"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    <div
                      class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                    >
                      MB
                    </div>
                  </div>
                  <div
                    class="md:w-6/12"
                  >
                    <h4
                      class="m-0"
                    >
                      Madison Butler
                    </h4>
                  </div>
                </div>
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    00:17
                  </div>
                  <div
                    class="md:w-10/12"
                  >
                    <div>
                      Oh, before I forget, can you please send me the 
                      <span
                        class="font-bold"
                      >
                        quote
                      </span>
                       we discussed 
                      <span
                        class="font-bold"
                      >
                        yesterday
                      </span>
                      ?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex border rounded mt-3 p-1 bg-gray-100"
        >
          <div
            class="w-full"
          >
            <div
              class="flex"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    <div
                      class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                    >
                      JS
                    </div>
                  </div>
                  <div
                    class="md:w-6/12"
                  >
                    <h4
                      class="m-0"
                    >
                      James Smith
                    </h4>
                  </div>
                </div>
                <div
                  class="flex mt-1 items-center"
                >
                  <div
                    class="md:w-2/12"
                  >
                    00:04
                  </div>
                  <div
                    class="md:w-10/12"
                  >
                    <div>
                      Sure, I will send you an email with the 
                      <span
                        class="font-bold"
                      >
                        quote
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render TranscriptRow component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex border rounded mt-3 p-1 bg-gray-100"
      >
        <div
          class="w-full"
        >
          <div
            class="flex"
          >
            <div
              class="w-full"
            >
              <div
                class="flex mt-1 items-center"
              >
                <div
                  class="md:w-2/12"
                >
                  <div
                    class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                  >
                    JS
                  </div>
                </div>
                <div
                  class="md:w-6/12"
                >
                  <h4
                    class="m-0"
                  >
                    James Smith
                  </h4>
                </div>
              </div>
              <div
                class="flex mt-1 items-center"
              >
                <div
                  class="md:w-2/12"
                >
                  00:10
                </div>
                <div
                  class="md:w-10/12"
                >
                  <div>
                    Good morning, everyone.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex border rounded mt-3 p-1 bg-gray-100"
    >
      <div
        class="w-full"
      >
        <div
          class="flex"
        >
          <div
            class="w-full"
          >
            <div
              class="flex mt-1 items-center"
            >
              <div
                class="md:w-2/12"
              >
                <div
                  class="rounded-full bg-blue-500 flex justify-center items-center text-white font-bold w-10 h-10"
                >
                  JS
                </div>
              </div>
              <div
                class="md:w-6/12"
              >
                <h4
                  class="m-0"
                >
                  James Smith
                </h4>
              </div>
            </div>
            <div
              class="flex mt-1 items-center"
            >
              <div
                class="md:w-2/12"
              >
                00:10
              </div>
              <div
                class="md:w-10/12"
              >
                <div>
                  Good morning, everyone.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
